Micro1 Challenge Index.html and css

--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <main id="main">
+        <div id="title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ad esse obcaecati asperiores molestias quos?</div>
+        <div id="img-div">
+            <img id="image" src="" alt="">
+            <div id="img-caption">Lorem ipsum dolor sit amet.</div>
+            <div id="tribute-info">Lorem ipsum dolor sit amet.</div>
+            <a href="https://github.com/ron-don/" id="tribute-link" target="_blank"></a>
+        </div>
+    </main>
+    
+</body>
+</html>
